# tket-extension-template

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  Cargo.toml  DEVELOPMENT.md  README.md  TEMPLATE_INSTRUCTIONS.md  devenv.nix  justfile  pyproject.toml  release-please-config.json  release-plz.toml
.github/: PULL_REQUEST_TEMPLATE.md  change-filters.yml  dependabot.yml
.github/actions/check-changes/: action.yml
.github/workflows/: ci-py.yml  ci-rs.yml  pr-title.yml  python-wheels.yml  release-please.yml  release-plz.yml  semver-checks.yml
python/: Cargo.toml  README.md  pyproject.toml
python/rust-bindings/: hugr.rs  lib.rs
python/src/tket_extension_template/: __init__.py
python/src/tket_extension_template/_bindings/: __init__.pyi
python/tests/: test_example.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
