[tool.uv.workspace]
members = ["python"]


[tool.uv]

dev-dependencies = [
    "pre-commit ~=4.5",
    "pytest ~=9.0",
    "pytest-cov ~=7.0",
    "maturin ~=1.10",
    "mypy ~=1.18",
    "ruff ~=0.14.6",
    "toml ~=0.10.2",
]

[tool.mypy]
strict = true

[tool.coverage.report]
# Codecov coverage exclusions
exclude_also = [
    # Don't complain about missing coverage on typing imports
    "if TYPE_CHECKING:",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "raise InternalGuppyError",

    # Don't complain about abstract methods, they aren't run:
    "@abstractmethod",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.maturin]
# Maturin is not the build system for the workspace (it is only used for `tket-extension-template`).
# We mirror the `tket-extension-template/pyproject.toml` config here so `maturin develop` still works
# from the root of the workspace.
module-name = "tket_extension_template._bindings"
python-source = "python/src/"
manifest-path = "python/Cargo.toml"
# "extension-module" tells pyo3 to skip linking against libpython.so
features = ["pyo3/extension-module"]
# custom profile with extra optimisations
profile = "release-py"
